# Agentic-Code-Retrieval-System

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/sample_docs/: sample_wiki.txt
docs/: architecture.md
sample_repo/: __init__.py  connection.py  utils.py
src/: __init__.py
src/week1_foundations/: __init__.py  config.py  experiment.py  prompts.py
src/week2_standard_rag/: __init__.py  embedder.py  pipeline.py  vector_store.py
src/week3_ast_rag/: __init__.py  parser.py  pipeline.py
src/week4_hybrid_github/: __init__.py  app.py  github_loader.py  hybrid_retriever.py
